@@ -48,9 +48,9 @@ static UBYTE D1FF_LATCH = 0;
 /* 1400XL/1450XLD and 1090 have ram here */
 int PBI_D6D7ram = FALSE;
 
-/* So far as is currently implmented: PBI_IRQ can be generated by the 1400/1450 Votrax and the Black Box button */
+/* So far as is currently implemented: PBI_IRQ can be generated by the 1400/1450 Votrax and the Black Box button */
 /* Each emulated PBI device will set a bit in this variable to indicate IRQ status */
-/* The acutal hardware has only one common line.  The device driver rom has to
+/* The actual hardware has only one common line.  The device driver rom has to
  * figure it out*/
 int PBI_IRQ = 0;
 
